implement part of youssef ekrami's Task

--- a/irs_assignment_1.ipynb
+++ b/irs_assignment_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "id": "824f3717",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          user id    item id  rate\n",
-      "0  A2CX7LUOHB2NDG  321732944     5\n",
-      "1  A2NWSAGRHCP8N5  439886341     1\n",
-      "2  A2WNBOD3WNDNKT  439886341     3\n",
-      "3  A1GI0U4ZRJA8WN  439886341     1\n",
-      "4  A1QGNMC6O1VW39  511189877     5\n",
-      "5  A3J3BRHTDRFJ2G  511189877     2\n",
-      "6  A2TY0BTJOTENPG  511189877     5\n",
-      "7  A34ATBPOK6HCHY  511189877     5\n",
-      "8   A89DO69P0XZ27  511189877     5\n",
-      "9   AZYNQZ94U6VDB  511189877     5\n"
+      "           userId    movieId  rating\n",
+      "0  A2CX7LUOHB2NDG  321732944       5\n",
+      "1  A2NWSAGRHCP8N5  439886341       1\n",
+      "2  A2WNBOD3WNDNKT  439886341       3\n",
+      "3  A1GI0U4ZRJA8WN  439886341       1\n",
+      "4  A1QGNMC6O1VW39  511189877       5\n",
+      "5  A3J3BRHTDRFJ2G  511189877       2\n",
+      "6  A2TY0BTJOTENPG  511189877       5\n",
+      "7  A34ATBPOK6HCHY  511189877       5\n",
+      "8   A89DO69P0XZ27  511189877       5\n",
+      "9   AZYNQZ94U6VDB  511189877       5\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "id": "32c94088",
    "metadata": {},
    "outputs": [
@@ -59,11 +59,11 @@
    ],
    "source": [
     "# 1. Print the number of users\n",
-    "num_users = df['user id'].nunique()\n",
+    "num_users = df['userId'].nunique()\n",
     "print(\"Number of users:\", num_users)\n",
     "\n",
     "# 2. Print the number of items\n",
-    "num_items = df['item id'].nunique()\n",
+    "num_items = df['movieId'].nunique()\n",
     "print(\"Number of items:\", num_items)\n",
     "\n",
     "# 2. Print the number of ratings\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "be378e0b",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "text": [
       "\n",
       "Number of ratings per user (nu):\n",
-      "user id\n",
+      "userId\n",
       "A030530627MK66BD8V4LN    1\n",
       "A1038957GWRBP375RU5T     1\n",
       "A106YUCY4SVX1D           1\n",
@@ -102,50 +102,109 @@
     }
    ],
    "source": [
-    "nu = df.groupby('user id').size()\n",
+    "nu = df.groupby('userId').size()\n",
     "print(\"\\nNumber of ratings per user (nu):\")\n",
     "print(nu.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "111849d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of ratings per item (no):\n",
+      "movieId\n",
+      "059400232X    3\n",
+      "089933623X    2\n",
+      "094339676X    1\n",
+      "321732944     1\n",
+      "439886341     3\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the number of ratings for each item (no) and save it\n",
-    "no = df.groupby('item id').size()\n",
+    "no = df.groupby('movieId').size()\n",
     "print(\"\\nNumber of ratings per item (no):\")\n",
     "print(no.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "3be7733e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average ratings per user (Fu):\n",
+      "userId\n",
+      "A030530627MK66BD8V4LN    4.0\n",
+      "A1038957GWRBP375RU5T     5.0\n",
+      "A106YUCY4SVX1D           5.0\n",
+      "A1079KKA0AXSL3           4.0\n",
+      "A107S4MT25VXQ5           5.0\n",
+      "                        ... \n",
+      "A1BAAIX0K2960C           5.0\n",
+      "A1BFGWPAR3XE0Y           5.0\n",
+      "A1BKC6B7YHYTVV           4.0\n",
+      "A1BMBZNUA3H10M           4.0\n",
+      "A1BV6SSYN6ITUD           5.0\n",
+      "Name: rating, Length: 100, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 5. Compute the average ratings per user (Fu) and save it\n",
-    "Fu = df.groupby('user id')['rate'].mean()\n",
+    "Fu = df.groupby('userId')['rating'].mean()\n",
     "print(\"\\nAverage ratings per user (Fu):\")\n",
-    "print(Fu.head())\n"
+    "print(Fu.head(100))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "b26f2a16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average ratings per item (rD):\n",
+      "movieId\n",
+      "059400232X    5.000000\n",
+      "089933623X    2.500000\n",
+      "094339676X    5.000000\n",
+      "321732944     5.000000\n",
+      "439886341     1.666667\n",
+      "511189877     4.500000\n",
+      "528881469     2.851852\n",
+      "558835155     3.000000\n",
+      "594012015     2.000000\n",
+      "594017343     1.000000\n",
+      "Name: rating, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 6. Compute the average ratings per item (rD) and save it\n",
-    "rD = df.groupby('item id')['rate'].mean()\n",
+    "rD = df.groupby('movieId')['rating'].mean()\n",
     "print(\"\\nAverage ratings per item (rD):\")\n",
-    "print(rD.head())"
+    "print(rD.head(10))"
    ]
   },
   {
