finish section 1 from point 1 to 11

--- a/irs_assignment_1.ipynb
+++ b/irs_assignment_1.ipynb
@@ -48,6 +48,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0903727f",
+   "metadata": {},
+   "source": [
+    "# Youssef **Ekrami**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5131a28a",
    "metadata": {},
    "source": [
@@ -530,6 +538,94 @@
     "target_users = [U1, U2, U3]\n",
     "print(\"\\nTarget users saved → you can now use them for recommendation experiments!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e268b270",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33002657",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57b0be57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20ef42b",
+   "metadata": {},
+   "source": [
+    "# Dareen Musa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b0162e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29803b09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d56b7d5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e95d011",
+   "metadata": {},
+   "source": [
+    "# Seif Samer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d74c090b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e7f271d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b67e24d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
